# emoji-cli

./: .gitignore  CHANGELOG.md  README.md  emoji-cli.cabal  mkrelease.sh
scripts/: mkrelease.sh
src/: Main.hs
src/Emoji/Cli/: Actions.hs  Config.hs  CursorPosition.hs  Emoji.hs  Events.hs  Options.hs  State.hs  Suggestion.hs  Types.hs  UI.hs
src/Emoji/Cli/State/: Update.hs
