cabal-version:      2.4
name:               emoji-cli
version:            0.1.0.0
synopsis:           Emoji picker for the command line.
description:        Search for emoji and copy them to your clipboard from the command line.
homepage:
bug-reports:        https://github.com/aloussase/emoji-cli
license:            MIT
license-file:       LICENSE
author:             Alexander Goussas
maintainer:         goussasalexander@gmail.com
copyright:          Alexander Goussas 2023
category:           Cli
extra-source-files: README.md

source-repository head
  type: git
  location: https://github.com/aloussase/emoji-cli

executable emoji-cli
    ghc-options:    -Wall
    main-is:          Main.hs
    other-modules:    Emoji.Cli.Types
                    , Emoji.Cli.Events
                    , Emoji.Cli.Emoji
                    , Emoji.Cli.UI
                    , Emoji.Cli.Actions
                    , Emoji.Cli.Options
                    , Emoji.Cli.Suggestion
                    , Emoji.Cli.Config
    build-depends:    base ^>=4.16.4.0
                    , text
                    , emojis
                    , ansi-terminal
                    , lens
                    , Hclip
                    , optparse-applicative
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: OverloadedStrings
                      , LambdaCase
                      , MultiParamTypeClasses
                      , FunctionalDependencies
                      , FlexibleInstances
                      , FlexibleContexts
